[FLINK-827-FIX] and rebase with current master